--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -385,7 +385,7 @@ footer {
     if (confirm("Are you sure you want to quit?")) {
       window.location.replace("examsummary.html");
     } else {
-      // If the user clicks on Cancel, do nothing
+      window.location.href("#");
     }
   }
 </script>
