--- a/Questions.html
+++ b/Questions.html
@@ -187,8 +187,9 @@ option {
            
         </ul>
  <ul class="navbar-nav navbar-right">
-  <li id="toggle" style="list-style-type: none;"> <a href="/timer1.html" onclick="check()"  style="color: white;text-decoration: none;"><img src="img1/pause.png"><p>Pause</p></a></li>
-  <li style="list-style-type: none;"> <a style="color: white;text-decoration: none;"><img src="img1/quit.png" onclick="quit()" ><p><span>Quit</span></p></a></li>
+ 
+<li id="toggle" style="list-style-type: none;"><a href="/timer1.html" onclick="check()"   style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/pause.png" style="margin-top: 14px;padding-left: 11px;"><p style="padding-right: 15px">Pause</p></a></li>
+<li style="list-style-type: none;"><a style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/quit.png" onclick="quit()"  style="margin-top: 14px;margin-left: 15px;text-decoration: none;"><p style="padding-left: 10px;"><span>Quit</span></p></a></li>
 
 
 </ul>
@@ -361,6 +362,8 @@ option {
             window.location.replace("timer1.html");
       }
   </script>
+
+
 
 <!-- face recognition background -->
 
