--- a/Questions.html
+++ b/Questions.html
@@ -166,7 +166,16 @@ option {
 .is-hide{
   display:none;
 }
+@media (min-width: 326px) and (max-width: 767px) {
+    .brand-logo {
+      text-align:center;
+    }
 
+    .brand-logo li {
+      display: block;
+      margin-left:140px;
+    }
+  }
 </style>
 </head>
 
@@ -183,7 +192,7 @@ option {
           <li><a href="#"></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-center">
-            <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 25px; text-align: center;">Assessment</a></li>
+          <div class="brand-logo"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;text-align: center;font-size: 18px;">Assessment</a></li></div>
            
         </ul>
  <ul class="navbar-nav navbar-right">
