--- a/examsummary.html
+++ b/examsummary.html
@@ -91,6 +91,7 @@ h4{
 @media (min-width: 326px) and (max-width: 767px) {
   .examsummary{
     text-align:center;
+    margin-top: 21px;
   }
   .examsummary li{
       display: block;
