--- a/TimeOutError.html
+++ b/TimeOutError.html
@@ -57,6 +57,7 @@
 @media (min-width: 326px) and (max-width: 767px) {
     .timeError{
       text-align:center;
+      margin-top: 21px;
     }
     .timeError li {
       display: block;
