--- a/instructions.html
+++ b/instructions.html
@@ -107,6 +107,7 @@ canvas {
 @media (min-width: 326px) and (max-width: 767px) {
     .brand-logo {
       text-align:center;
+	  margin-top: 21px;
     }
 
     .brand-logo li {
