--- a/timer1.html
+++ b/timer1.html
@@ -64,6 +64,7 @@
 @media (min-width: 326px) and (max-width: 767px) {
     .timer{
       text-align:center;
+      margin-top: 21px;
     }
     .timer li{
       display: block;
