--- a/Questions.html
+++ b/Questions.html
@@ -169,7 +169,6 @@ option {
 @media (min-width: 326px) and (max-width: 767px) {
     .brand-logo {
       text-align:center;
-      margin-top: 21px;
     }
 
     .brand-logo li {
@@ -194,7 +193,7 @@ option {
           <li><a href="#"></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-center">
-          <div class="brand-logo"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;text-align: center;font-size: 18px;">Assessment</a></li></div>
+          <div class="brand-logo"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;text-align: center;font-size: 18px; margin-top: 21px;">Assessment</a></li></div>
            
         </ul>
  <ul class="navbar-nav navbar-right">
