--- a/exam_select.html
+++ b/exam_select.html
@@ -145,7 +145,6 @@
 @media (min-width: 326px) and (max-width: 767px) {
     .brand-logo {
       text-align:center;
-      margin-top: 21px;
     }
 
     .brand-logo li {
@@ -173,7 +172,7 @@
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
         <div class="brand-logo">
-        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center;">Exam List</a></li>
+        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center; margin-top: 21px;">Exam List</a></li>
         </div> 
         <div class="back-button">
         <li class="social pull-right" ><a href="Profile.html" style="color: white;font-family:Calibri regular;"><img src="img/back.png" style="width: 32px;height: 22px; margin-top: 20px;"></a></li>
