--- a/profileerror.html
+++ b/profileerror.html
@@ -48,7 +48,7 @@
 @media (min-width: 326px) and (max-width: 767px) {
     .brand-logo {
       text-align:center;
-      margin-top: 21px;
+      
     }
     .brand-logo li {
       display: block;
@@ -72,7 +72,7 @@
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-90px;width:220px;height: 63px"></a></li> -->
         <div class="brand-logo">
-          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center;">Profile Error</a></li>
+          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center; margin-top: 21px;">Profile Error</a></li>
         </div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li> 
       </ul>
