--- a/examsummary.html
+++ b/examsummary.html
@@ -91,10 +91,12 @@ h4{
 @media (min-width: 326px) and (max-width: 767px) {
   .examsummary{
     text-align:center;
+    margin-left: 10px;
   }
   .examsummary li{
       display: block;
-      margin-left:140px;
+      padding: 0px;
+      margin-left: 15px;
   }
 }
 
@@ -116,7 +118,7 @@ h4{
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png"  style="margin-top:-14px;margin-left:-69px;width:200px;height:60px"></a></li> -->
-        <div class="examsummary"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center; margin-top: 21px;">Exam Summary</a></li></div>
+        <div class="examsummary" style="margin-top :11px;"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;">Exam Summary</a></li></div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
       </ul>
       </div><!-- /.navbar-collapse -->
