--- a/TwoFaceError.html
+++ b/TwoFaceError.html
@@ -28,6 +28,7 @@
     left: 0;
     text-align: center;
     margin:0 auto;
+    margin-left: 33px;
 }
 .navbar-toggle {
     z-index:3;
@@ -45,7 +46,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>    
-    <a class="navbar-brand" href="#" style="color: white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align:center;">Error</a>
+    <a class="navbar-brand" href="#" style="color: white;font-family: 'Source Sans Pro', sans-serif;font-size:20px;text-align:center;">Error</a>
   </div>
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-left" >
