--- a/timer1.html
+++ b/timer1.html
@@ -64,7 +64,7 @@
 @media (min-width: 326px) and (max-width: 767px) {
     .timer{
       text-align:center;
-      margin-top: 21px;
+      margin-top: 6px;
     }
     .timer li{
       display: block;
@@ -85,7 +85,7 @@
     <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
-      <div class="timer"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;margin-right: 50px;  margin-top: 21px;">Break</a></li></div>
+      <div class="timer" style=""><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:20px;margin-right: 5px;">Break</a></li></div>
       <li class="social pull-right" style="display: none;"><a href="#">Social Links</a></li>
     </ul>
     </div><!-- /.navbar-collapse -->
