--- a/timer1.html
+++ b/timer1.html
@@ -85,7 +85,7 @@
     <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
-      <div class="timer" style=""><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:20px;margin-right: 5px;">Break</a></li></div>
+      <div class="timer" style="margin-top: 12px;"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:20px;margin-right: 5px;">Break</a></li></div>
       <li class="social pull-right" style="display: none;"><a href="#">Social Links</a></li>
     </ul>
     </div><!-- /.navbar-collapse -->
