--- a/exam_select.html
+++ b/exam_select.html
@@ -145,6 +145,8 @@
 @media (min-width: 326px) and (max-width: 767px) {
     .brand-logo {
       text-align:center;
+      margin-right: 34px;
+      margin-top: 1px;
     }
 
     .brand-logo li {
@@ -152,7 +154,8 @@
       margin-left:187px;
     }
     .back-button{
-        margin-top:-9px;
+        margin-top: 4px;
+        margin-right: -22px;
     }
   }
 
@@ -171,10 +174,10 @@
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
-        <div class="brand-logo">
-        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center; margin-top: 21px;">Exam List</a></li>
+        <div class="brand-logo" style="margin-top: 11px;">
+        <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:1px;text-align: center;">Exam List</a></li>
         </div> 
-        <div class="back-button">
+        <div class="back-button" style="margin-top: -21px">
         <li class="social pull-right" ><a href="Profile.html" style="color: white;font-family:Calibri regular;"><img src="img/back.png" style="width: 32px;height: 22px; margin-top: 20px;"></a></li>
       </div>
     </ul>
