--- a/Questions.html
+++ b/Questions.html
@@ -361,7 +361,7 @@ option {
     if (confirm("Are you sure you want to quit?")) {
       window.location.replace("examsummary.html");
     } else {
-      window.location.href("questions?r");
+      window.location.href("");
     }
   }
 </script>
