--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -386,7 +386,7 @@ footer {
     if (confirm("Are you sure you want to quit?")) {
       window.location.replace("examsummary.html");
     } else {
-      window.location.href("#");
+      window.location.href("");
     }
   }
 </script>
