quit function in questions

--- a/Questions.html
+++ b/Questions.html
@@ -193,13 +193,13 @@ option {
           <li><a href="#"></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-center">
-          <div class="brand-logo"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;text-align: center;font-size: 18px; margin-top: 21px;">Assessment</a></li></div>
+          <div class="brand-logo" style="margin-top: 11px;"><li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;text-align: center;font-size: 18px; margin-top: 21px;">Assessment</a></li></div>
            
         </ul>
  <ul class="navbar-nav navbar-right">
  
 <li id="toggle" style="list-style-type: none;"><a href="/timer1.html" onclick="check()"   style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/pause.png" style="margin-top: 14px;padding-left: 11px;"><p style="padding-right: 15px">Pause</p></a></li>
-<li style="list-style-type: none;"><a style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/quit.png" onclick="quit()"  style="margin-top: 14px;margin-left: 15px;text-decoration: none;"><p style="padding-left: 10px;"><span>Quit</span></p></a></li>
+<li style="list-style-type: none;"><a onclick="quit()" style="color: white;font-family: 'Source Sans Pro', sans-serif;text-decoration: none;cursor: pointer;"><img src="img1/quit.png" style="margin-top: 14px;margin-left: 15px;text-decoration: none;"><p style="padding-left: 10px;"><span>Quit</span></p></a></li>
 
 
 </ul>
@@ -361,7 +361,7 @@ option {
     if (confirm("Are you sure you want to quit?")) {
       window.location.replace("examsummary.html");
     } else {
-      window.location.href("");
+      window.location.href("#");
     }
   }
 </script>
