--- a/questionsDemo.html
+++ b/questionsDemo.html
@@ -244,7 +244,7 @@ footer {
 	  <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav" style="display: flex;align-items: center;justify-content:space-around;">
 		  <!-- <li ><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:64px"></a></li> -->
-      <div class="assessment"><li ><a href="#" style="color:white;font-size:15px;margin-top:21px;">Assessment</a></li></div>
+      <div class="assessment" style="margin-top: 11px;"><li ><a href="#" style="color:white;font-size:15px;margin-top:11px;">Assessment</a></li></div>
       <li id="toggle" style="list-style-type: none;"> <a href="/timer1.html" onclick="check()"  style="color: white;text-decoration: none;"><img src="img1/pause.png"><p>Pause</p></a></li>
       <li style="list-style-type: none;"> <a style="color: white;text-decoration: none;"><img src="img1/quit.png" onclick="quit()" ><p><span>Quit</span></p></a></li>
     </ul>
@@ -386,7 +386,7 @@ footer {
     if (confirm("Are you sure you want to quit?")) {
       window.location.replace("examsummary.html");
     } else {
-      window.location.href("");
+      window.location.href("#");
     }
   }
 </script>
