--- a/facedetection1.html
+++ b/facedetection1.html
@@ -114,7 +114,7 @@
 	  <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav">
 		  <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-50px;width:207px;height:61px"></a></li> -->
-      <div class="brand-logo">
+      <div class="brand-logo" style="margin-top: 11px;">
         <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size: 18px;text-align: center;">Face Recognition</a></li>
       </div>
 		  <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li>
