--- a/profileerror.html
+++ b/profileerror.html
@@ -71,8 +71,8 @@
       <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li class="pull-left"><a href="#"><img src="img/toyota_logo.png" style="margin-top:-15px;margin-left:-90px;width:220px;height: 63px"></a></li> -->
-        <div class="brand-logo">
-          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:18px;text-align: center; margin-top: 21px;">Profile Error</a></li>
+        <div class="brand-logo" style="margin-top: 11px;">
+          <li><a href="#" style="color:white;font-family: 'Source Sans Pro', sans-serif;font-size:19px;text-align: center; margin-top: 21px;">Profile Error</a></li>
         </div>
         <li class="social pull-right" style="visibility: hidden;"><a href="#">Social Links</a></li> 
       </ul>
