--- a/facedetection1.html
+++ b/facedetection1.html
@@ -178,7 +178,7 @@ function Refresh(){
 <script type="text/javascript">
  
   $(document).ready(function() {
-
+    $("#overlay").fadeIn(300);
     video_open();
             call_afteer();
 
